Fixed white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html,body{
   width:100%;
   margin:0;
   height:100%;
+  overflow: hidden;
 }
 .bg {
   /* The image used */
@@ -26,8 +27,4 @@ html,body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 30px;
-}
-h1 {
-  -webkit-text-stroke: 0.1px black;
 }
